objects/IXOSCodeMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_Chan_Code__c</fullName>
        <label>Dist Chan Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <label>Division Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Org Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>IXOS Code map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Code__c</columns>
        <columns>Dist_Chan_Code__c</columns>
        <columns>Division_Code__c</columns>
        <columns>Sales_Org_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>